Project

General

Profile

Actions

Bug #20571

closed

rbd-mirror: cluster watcher should ignore -EPERM errors against reading 'rbd_mirroring' object

Added by Jason Dillaman almost 7 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

$ sudo ceph osd pool create demo 8 8 --cluster Two
pool 'demo' created
$sudo  tailf /var/log/ceph/Two-client.Two.log
2017-05-10 15:33:40.716390 7f59a1953c40 -1 librbd: Failed to retrieve mirror mode: (1) Operation not permitted
2017-05-10 15:33:40.716405 7f59a1953c40 -1 rbd::mirror::ClusterWatcher:0x7f59abe35990 read_pool_peers: could not tell whether mirroring was enabled for demo : (1) Operation not permitted
------------------
2017-05-10 15:34:10.721529 7f59a1953c40 -1 rbd::mirror::ClusterWatcher:0x7f59abe35990 read_pool_peers: could not tell whether mirroring was enabled for demo : (1) Operation not permitted

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #20637: jewel: rbd-mirror: cluster watcher should ignore -EPERM errors against reading 'rbd_mirroring' objectResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 7 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman almost 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub almost 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20636: kraken: rbd-mirror: cluster watcher should ignore -EPERM errors against reading 'rbd_mirroring' object added
Actions #5

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20637: jewel: rbd-mirror: cluster watcher should ignore -EPERM errors against reading 'rbd_mirroring' object added
Actions #6

Updated by Jason Dillaman over 6 years ago

  • Backport changed from kraken,jewel to jewel
Actions #7

Updated by Nathan Cutler over 6 years ago

  • Copied to deleted (Backport #20636: kraken: rbd-mirror: cluster watcher should ignore -EPERM errors against reading 'rbd_mirroring' object)
Actions #8

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF