rbd-mirror: ignore permission errors on rbd_mirroring object

Fixes: http://tracker.ceph.com/issues/20571
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 6c2d896ea2cee515f0fecec41adbec1e7d6dee23)

Conflicts:
	src/tools/rbd_mirror/ClusterWatcher.cc: trivial resolution